overlays/production/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: balance-fit-route
  labels:
    app: nginx
    component: web
spec:
  host: balance-fit.apps.ocp-prd.kohlerco.com
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
